tests/script/negative/undefinedness/access_restriction_bad_2.s
global account [roles: {bob}] bob; // unbound variable 'bob'

transition initial -> terminal;

@initial
go() { terminate(); }
