tests/script/negative/undefinedness/access_restriction_bad_2.out
Error at Line 1, Column 25:
   Unbound variable:  bob